# fast-api-template

./: README.md  pyproject.toml
app/: app.py
tests/: test_fast_api_template.py
